# pyspark-bundle

./: env-init.sh  environment.yml  pyproject.toml
.github/workflows/: codeql-analysis.yml
src/pysparkbundle/: PySparkBundle.py
src/pysparkbundle/_config/: config.yaml
src/pysparkbundle/csv/: csv_append.py  csv_overwrite.py  csv_write_errorifexists.py  csv_write_ignore.py
src/pysparkbundle/delta/: delta_append.py  delta_overwrite.py  delta_write_errorifexists.py  delta_write_ignore.py
src/pysparkbundle/json/: json_append.py  json_overwrite.py  json_write_errorifexists.py  json_write_ignore.py
src/pysparkbundle/lineage/: PathWriterParser.py
src/pysparkbundle/parquet/: parquet_append.py  parquet_overwrite.py  parquet_write_errorifexists.py  parquet_write_ignore.py
src/pysparkbundle/test/: PySparkTestCase.py
